--- a/about.html
+++ b/about.html
@@ -9,11 +9,33 @@
     <title>About 이성진</title>
 </head>
 <body>
-    <section id="about">
-        <div >
-            
-        </div>
-    </section>
+    <div id="layout">
+        <section id="about">
+            <section id="container">
+                <main id="main">
+                    <header id="header">
+                        <div id="in_header">
+                            <button class="header_btn"><span>메인</span></button>
+                            <button class="header_btn"><span>활동</span></button>
+                        </div>
+                    </header>
+                    <div id="in_main">
+                        <div id="main_content">
+                            <h1>
+                                인성과 환경을 중요하게 여기는 웹 개발자가 되고 싶은
+                            </h1>
+                            <h1>이성진</h1>
+                        </div>
+                    </div>
+                </main>
+
+                <section id="page_two">
+
+                </section>
+
+            </section>
+        </section>
+    </div>
     <script src="js/about.js"></script>
 </body>
 </html>
