[Add] about.css, about.js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <div id="layout">
         <section id="container">
 
+            <header id="header">
+                <div id="in_header">
+                    <button id="go_main" class="header_btn" onclick="goPage('/IntroduceMyself/dsm-font_end/')"><span>메인</span></button>
+                    <button id="go_activity" class="header_btn" onclick="goPage('/IntroduceMyself/dsm-font_end/about.html')"><span>활동</span></button>
+                </div>
+            </header>
+
             <nav id="sidebar">
                 <div id="side_title">
                     <div><a href="https://google.com">dltjdqhr55@gmail.com</a></div>
