--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/reset.css">
-    <title>About 이성진</title>
+    <title>이성진의 자기소개</title>
 </head>
 <body>
     <div id="layout">
@@ -16,22 +16,44 @@
                 <main id="main">
                     <header id="header">
                         <div id="in_header">
-                            <button class="header_btn"><span>메인</span></button>
-                            <button class="header_btn"><span>활동</span></button>
+                            <button id="go_main" onclick="goPage('/IntroduceMyself/dsm-font_end/')" class="header_btn"><span>메인</span></button>
+                            <button id="go_activity" class="header_btn" onclick="goPage('/IntroduceMyself/dsm-font_end/about.html')"><span>활동</span></button>
                         </div>
                     </header>
                     <div id="in_main">
                         <div id="main_content">
-                            <h1>
-                                인성과 환경을 중요하게 여기는 웹 개발자가 되고 싶은
-                            </h1>
+                            <h1>환경을 소중하게 인성을 중요하게 여기는 웹 개발자</h1>
                             <h1>이성진</h1>
                         </div>
                     </div>
                 </main>
 
                 <section id="page_two">
-                    
+                    <div id="in_page_two">
+                        <div id="title">
+                            <h1><span>이성진, 웹 개발자</span></h1>
+                        </div>
+                        <div id="introduce">
+                            <p class="introduce_text">
+                                안녕하세요? 저는 1학년 2반 이성진입니다.
+                            </p>
+                            <p class="introduce_text">
+                                제가 DMS에 지원한 이유는 총 3가지입니다.
+                            </p>
+                            <p class="introduce_text">
+                                <strong>첫째,</strong> 다양한 분야들과 협업이 많다고 생각합니다. DMS는 1학년부터 3학년까지 세 개의 학년이 모여서 진행하는 팀 단위 프로젝트입니다. 그만큼 다양한 분야의 사람들과 경험할 기회가 많다고 생각해서 지원하였습니다. 또한, 저는 현재 서버와의 통신을 직접 해보았기 때문에 더 많은 경험이 있다고 생각합니다.
+                            </p>
+                            <p class="introduce_text">
+                                <strong>둘째,</strong> 웹 프론트로서 큰 성장의 기회라고 생각합니다. DMS는 엔트리와 더불어 대마고에서 가장 큰 팀 프로젝트라고 생각합니다. 이런 기회를 놓치는 것은 너무나 안타깝다고 생각합니다. 이 기회를 저의 꿈의 기회라고 생각하겠습니다.
+                            </p>
+                            <p class="introduce_text">
+                                <strong>셋째,</strong> 웹 프론터의 기본을 배우고 싶습니다. 저는 웹 프론트를 시작한 지 약 4개월밖에 되지 않은 웹 초보자입니다. DMS에 들어가 다양한 웹 프론터의 기술을 배우고 실력을 증진하고 싶습니다. 선배들이 직접 짠 코드를 보면서 리뷰도 하고 다양한 기술의 쓰임을 알고 싶습니다.
+                            </p>
+                            <p class="introduce_text">
+                                저를 뽑아주신다면 최선을 다해 팀 프로젝트에 참여하고 도움이 될 수 있도록 노력하겠습니다. 감사합니다.
+                            </p>
+                        </div>
+                    </div>
                 </section>
 
             </section>
