--- a/index.html
+++ b/index.html
@@ -6,35 +6,67 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reset.css">
-    <title>이성진의 자기소개</title>
+    <title>이성진의 자기소개 - 메인</title>
 </head>
 <body>
     <div id="layout">
-        <section id="container">
+        <section id="about">
+            <section id="container">
 
-            <header id="header">
-                <div id="in_header">
-                    <button id="go_main" class="header_btn" onclick="goPage('/IntroduceMyself/dsm-font_end/')"><span>메인</span></button>
-                    <button id="go_activity" class="header_btn" onclick="goPage('/IntroduceMyself/dsm-font_end/about.html')"><span>활동</span></button>
-                </div>
-            </header>
+                <main id="main">
+                    <header id="header">
+                        <div id="in_header">
+                            <button id="view_menu" class="header_btn"><span>Home</span></button>
+                            <div id="show_menu">
+                                <button id="go_main" class="header_btn" onclick="goPage('/IntroduceMyself/dsm-font_end/')"><span>메인</span></button>
+                                <button id="go_activity" class="header_btn"
+                                    onclick="goPage('/IntroduceMyself/dsm-font_end/about.html')"><span>활동</span></button>
+                            </div>
+                        </div>
+                    </header>
+                    <div id="in_main">
+                        <div id="main_content">
+                            <h1>환경을 소중하게 인성을 중요하게 여기는 웹 개발자</h1>
+                            <h1>이성진</h1>
+                        </div>
+                    </div>
+                </main>
 
-            <nav id="sidebar">
-                <div id="side_title">
-                    <div><a href="https://google.com">dltjdqhr55@gmail.com</a></div>
-                    <div><a href="https://github.com/LeeSeongJinCa">https://github.com/LeeSeongJinCa</a></div>
-                </div>
-                <div id="side_content">
-                    <div class="side_subtitle" id="pirataje" onclick="change_div(0)">PIRATAJE(피라타제)</div>
-                    <div class="side_subtitle" id="template" onclick="change_div(1)">Template(템플릿)</div>
-                    <div class="side_subtitle" id="requiz" onclick="change_div(2)">Requiz(리퀴즈)</div>
-                </div>
-            </nav>
-            
-            <main id="main">
-                <!-- 개요 클릭시 바뀔 내용 -->
-                
-            </main>
+                <section id="page_two">
+                    <div id="in_page_two">
+                        <div id="title">
+                            <h1><span>이성진, 웹 개발자</span></h1>
+                        </div>
+                        <div id="introduce">
+                            <div class="introduce_text">
+                                <p>안녕하세요? 저는 1학년 2반 이성진입니다.</p>
+                            </div>
+                            <div class="introduce_text">
+                                <p>제가 DMS에 지원한 이유는 총 3가지입니다.</p>
+                            </div>
+                            <div class="introduce_text">
+                                <div class="introduce_subtitle"><strong>웹 프론터의 기본</strong></div>
+                                <p>저는 웹 프론트를 시작한 지 약 4개월밖에 되지 않은 웹 초보자입니다. DMS에 들어가 다양한 웹 프론터의 기술을 배우고 실력을 증진하고 싶습니다. 
+                                    또, 선배들이 직접 짠 코드를 리뷰하면서 다양한 기술의 쓰임을 알고싶습니다.</p>
+                            </div>
+                            <div class="introduce_text">
+                                <div class="introduce_subtitle"><strong>여러 분야와 협업</strong></div>
+                                <p>DMS는 1학년부터 3학년까지 전체 학년이 모여서 진행하는 팀 단위 프로젝트입니다. 그만큼 다양한 분야의 사람들과 함께할 기회가 많다고 생각합니다. 
+                                    그렇기에 DMS에 들어가 일찍이 다양한 사람들과 협업을 해보고 싶습니다.</p>
+                            </div>
+                            <div class="introduce_text">
+                                <div class="introduce_subtitle"><strong>웹 프론트로서 큰 성장의 기회</strong></div>
+                                <p>사용자에게 직접적으로 웹 사이트를 제공하는 것은 웹 프론터의 꿈이라고 생각합니다. 이런 꿈을 고등학교에서 실현할 수 있는 기회는 DMS라고 생각합니다.
+                                게다가, DMS는 대마고를 학생을 위한 프로그램을 만들기 때문에 직접적이고 빠른 피드백을 받을 수 있습니다.</p>
+                            </div>
+                            <div class="introduce_text">
+                                <p>저를 뽑아주신다면 최선을 다해 팀 프로젝트에 참여하고 도움이 될 수 있도록 노력하겠습니다. 감사합니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+            </section>
         </section>
     </div>
     <script src="js/main.js" type="text/javascript"></script>
