[Fix] header_menu
헤더 메뉴 오류 고침

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                 <main id="main">
                     <header id="header">
                         <div id="in_header">
-                            <button id="view_menu" class="header_btn"><span>Home</span></button>
+                            <button id="view_menu" class="header_btn"><img width="90px" height="50px" src="imgs/home.svg" alt="home_icon"></button>
                             <div id="show_menu">
-                                <button id="go_main" class="header_btn" onclick="goPage('/IntroduceMyself/dsm-font_end/')"><span>메인</span></button>
+                                <button id="go_main" class="header_btn"
+                                    onclick="goPage('/IntroduceMyself/dsm-font_end/')"><span>메인</span></button>
                                 <button id="go_activity" class="header_btn"
                                     onclick="goPage('/IntroduceMyself/dsm-font_end/about.html')"><span>활동</span></button>
                             </div>
