--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
             <header id="header">
                 <div id="in_header">
-                    <button id="view_menu" class="header_btn"><span>Home</span></button>
+                    <button id="view_menu" class="header_btn"><img width="90px" height="50px" src="imgs/home.svg" alt="home_icon"></button>
                     <div id="show_menu">
                         <button id="go_main" class="header_btn"
                             onclick="goPage('/IntroduceMyself/dsm-font_end/')"><span>메인</span></button>
