[Fix] main.css ,html
디자인 고치기.

--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
                     <button id="view_menu" class="header_btn"><img width="90px" height="50px" src="imgs/home.svg" alt="home_icon"></button>
                     <div id="show_menu">
                         <button id="go_main" class="header_btn"
-                            onclick="goPage('/IntroduceMyself/dsm-font_end/')"><span>메인</span></button>
+                            onclick="goPage('/IntroduceMyself/1217이성진_DMS_과제/')"><span>메인</span></button>
                         <button id="go_activity" class="header_btn"
-                            onclick="goPage('/IntroduceMyself/dsm-font_end/about.html')"><span>활동</span></button>
+                            onclick="goPage('/IntroduceMyself/1217이성진_DMS_과제/about.html')"><span>활동</span></button>
                     </div>
                 </div>
             </header>
