[Fix] all web page Design fix
good...

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
                     <div id="in_header">
                         <button id="view_menu" class="header_btn"><img width="90px" height="50px" src="imgs/home.svg" alt="home_icon"></button>
                         <div id="show_menu">
-                            <button id="go_main" class="header_btn"
-                                onclick="goPage('/IntroduceMyself/1217이성진_DMS_과제/')"><span>메인</span></button>
-                            <button id="go_activity" class="header_btn"
-                                onclick="goPage('/IntroduceMyself/1217이성진_DMS_과제/about.html')"><span>활동</span></button>
+                            <a href="index.html"><button id="go_main" class="header_btn"><span>메인</span></button></a>
+                            <a href="about.html"><button id="go_activity" class="header_btn"><span>활동</span></button></a>
+                            <!-- onclick="goPage('/IntroduceMyself/1217이성진_DMS_과제/about.html')" -->
                         </div>
                     </div>
                 </header>
